fix horizontal scroll for ios

--- a/src/style/_hero.scss
+++ b/src/style/_hero.scss
@@ -38,6 +38,7 @@ canvas {
     position: absolute;
     display: flex;
     flex-wrap: nowrap;
+    overflow: hidden;
     font-size: 5em;
     top: 30dvh;
     text-transform: uppercase;
@@ -51,11 +52,15 @@ canvas {
         color: transparent;
         background-clip: text;
         -webkit-background-clip: text;
-        &:first-child{
+        &--subname{
             display: none;
         }
         &--special{
-            background-color: rgb(255, 255, 255);
+            background-image: linear-gradient(to right, 
+                rgb(255, 255, 255),
+                rgba(255, 255, 255, 0.8), 
+                rgba(255, 255, 255, 0));
+            
             border-bottom: solid 1px rgb(255, 255, 255);
         }
     }
